Disabled privilege escalation

--- a/infrastructure/base/cloudflare-ddns/manifest.yaml
+++ b/infrastructure/base/cloudflare-ddns/manifest.yaml
@@ -48,6 +48,7 @@ spec:
               drop:
                 - all
             readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
       restartPolicy: Always
 
 
